Compiler pipeline: lexer, parser, AST printer, CMake layout cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,17 +3,13 @@ project(mycompiler LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_executable(mycompiler
   src/main.cpp
   src/lexer.cpp
+  src/parser.cpp
+  src/ast_printer.cpp
 )
 
 target_include_directories(mycompiler PRIVATE include)
-
-if (MSVC)
-  target_compile_options(mycompiler PRIVATE /W4)
-else()
-  target_compile_options(mycompiler PRIVATE -Wall -Wextra -Wpedantic)
-endif()
+target_compile_options(mycompiler PRIVATE -Wall -Wextra -Wpedantic)
